<resources>
    <string name="app_name">Flag Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_players">Number of Players</string>
    <string name="multiplayer_message">Choose  how many players you would like to play with</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results"> %1$d guesses, %2$.02f%% correct on the</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">One region must be selected. Setting North America as the default region.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="Loading">Loading...</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="BonusQuestion">Bonus Question !!!</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="Continue">Continue</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">North_America</string>
    <string name="title_activity_settings">Settings</string>
    <string name="PointsAllocated"> %1$d POINTS !!!!!!</string>
    <string name="BonusPoints">+10 BONUS POINTS!!! </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
